створено стилі для: body, content, items

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,16 @@ flex-direction: column;
 justify-content: center;
 gap: 10px;
 }
+
+div {
+  border: 1px solid black;
+
+
+}
+
+
+.items {
+    padding: 10px;
+    display: flex;
+    gap: 20px;
+}
