--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{
     background-color: azure;
-
+    font-family: sans-serif;
+    display: flex;
+    justify-content: center;
 
 }
 
@@ -18,6 +20,21 @@ div {
 
 }
 
+
+
+.title {
+  background: red;
+  width: auto;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+
+  text-transform: uppercase;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+
+}
 
 .items {
     padding: 10px;
