--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body{
-    background-color: azure;
-    font-family: sans-serif;
-    display: flex;
-    justify-content: center;
+  background-color: rgb(255, 255, 255);
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
 
 }
 
 content {
-width: 800px;
+width: 420px;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -15,7 +15,7 @@ gap: 10px;
 }
 
 div {
-  border: 1px solid black;
+border: 1px solid rgb(189, 157, 157);
 
 
 }
@@ -23,21 +23,37 @@ div {
 
 
 .title {
-  background: red;
-  width: auto;
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
+background: red;
+width: auto;
+color: white;
+padding: 10px;
+border-radius: 5px;
 
-  text-transform: uppercase;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+text-transform: uppercase;
+font-size: 20px;
+text-align: center;
+font-weight: bold;
+letter-spacing: 3px;
 
 }
 
 .items {
-    padding: 10px;
-    display: flex;
-    gap: 20px;
+  padding: 10px;
+  display: flex;
+  gap: 20px;
+}
+
+
+.item {
+  width: 200px;
+  height: 300px;
+  margin-bottom: 15px;
+  border: 1px solid darkblue;
+
+  
+}
+
+
+.contacts p {
+  margin: 3px;
 }
