--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,96 @@
-body{
-  background-color: rgb(255, 255, 255);
-  font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  background-color: #f1f1f1;
   display: flex;
   justify-content: center;
-
 }
 
 content {
-width: 420px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-gap: 10px;
+  width: 460px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-
-div {
-border: 1px solid rgb(189, 157, 157);
-
-
-}
-
-
 
 .title {
-background: red;
-width: auto;
-color: white;
-padding: 10px;
-border-radius: 5px;
-
-text-transform: uppercase;
-font-size: 20px;
-text-align: center;
-font-weight: bold;
-letter-spacing: 3px;
-
+  width: auto;
+  padding: 10px;
+  margin-top: 20px;
+  background: rgb(253, 48, 48);
+  border-radius: 5px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 3px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
 }
 
 .items {
-  padding: 10px;
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  gap: 10px;
 }
-
 
 .item {
-  width: 200px;
-  height: 300px;
-  margin-bottom: 15px;
-  border: 1px solid darkblue;
-
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 200px;
+  min-height: 400px;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #ffffff;
 }
 
+.item-title {
+  font-weight: bold;
+}
 
-.contacts p {
-  margin: 3px;
+.item-image img {
+  height: 200px;
+  object-fit: cover;
+}
+
+.parts-pay {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.parts-pay img {
+  height: 24px;
+}
+
+.price {
+  border: 1px solid rgb(194, 194, 194);
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.price div:first-child {
+  width: 100px;
+  font-size: 20px;
+}
+
+.price div:first-child span {
+  text-decoration: line-through;
+}
+
+.price.bonus {
+  background-color: #ffeeba;
+  padding: 5px 10px;
+  border: 1px dashed #aaa;
 }
