--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 content {
-  width: 460px;
+  width: 300;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -68,7 +68,7 @@ content {
 }
 
 .parts-pay img {
-  height: 24px;
+  height: 20px;
 }
 
 .price {
@@ -93,4 +93,15 @@ content {
   background-color: #ffeeba;
   padding: 5px 10px;
   border: 1px dashed #aaa;
+}
+
+
+
+
+.item-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+
 }
